# weather-app

./: Cargo.toml  Dockerfile  README.md  fly.toml
src/: app.rs  main.rs  weather-codes.json
static/: index.html  styles.css  time.js
templates/: error.html  weather.html
